[build-system]
requires = ["setuptools>=58", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tablib"
description = "Format agnostic tabular data library (XLS, JSON, YAML, CSV, etc.)"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Kenneth Reitz", email = "me@kennethreitz.org"}
]
maintainers = [
    {name = "Jazzband Team", email = "roadies@jazzband.co"},
    {name = "Hugo van Kemenade"},
    {name = "Claude Paroz", email = "claude@2xlibre.net"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[project.optional-dependencies]
all = [
    "odfpy",
    "openpyxl>=2.6.0",
    "pandas",
    "pyyaml",
    "tabulate",
    "xlrd",
    "xlwt",
]
cli = ["tabulate"]
html = []
ods = ["odfpy"]
pandas = ["pandas"]
xls = ["xlrd", "xlwt"]
xlsx = ["openpyxl>=2.6.0"]
yaml = ["pyyaml"]

[project.urls]
homepage = "https://tablib.readthedocs.io"
documentation = "https://tablib.readthedocs.io"
repository = "https://github.com/jazzband/tablib"
changelog = "https://github.com/jazzband/tablib/blob/master/HISTORY.md"

[tool.setuptools_scm]
write_to = "src/tablib/_version.py"

[tool.ruff]
fix = true
line-length = 99

lint.select = [
  "C4",     # flake8-comprehensions
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "I",      # isort
  "ISC",    # flake8-implicit-str-concat
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "RUF022", # unsorted-dunder-all
  "RUF100", # unused noqa (yesqa)
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
  "YTT",    # flake8-2020
]
lint.ignore = [
  "E203",   # Whitespace before ':'
  "E221",   # Multiple spaces before operator
  "E226",   # Missing whitespace around arithmetic operator
  "E241",   # Multiple spaces after ','
  "E741",   # Ambiguous variable name
  "PIE790", # Unnecessary pass statement
  "UP038",  # Makes code slower and more verbose
]
lint.isort.known-first-party = [ "tablib" ]
